CHANGELOG

NEXT VERSION
V2.0
    Features
    - Support for tablets
    - Swipe to knock over pins

    Design
    - Material design
    - New icon
    - Improved navigation

V1.2.1
    - Bug fixes
V1.2
    - Larger button to move to next frame
    - Option to have frame auto advance after an interval of inactivity
    - Bug fixes
V1.1.3
    - Added option to change header/stat fonts to black, for better readability
    - Bug fixes
V1.1.2
    - Now returns to same game when phone comes off standby mode
    - Changed display method of future frames in a game
    - Bug fixes
V1.1.1
    - Added link in menu to settings
    - Simplified settings screen
    - Bug fixes
V1.1
    - Added new option to set results of match play
    - Added match play statistics to the list of stats
    - Added averages by game to the statistics
    - Changed appearance of stats, now in expandable groups
    - Fixed bug where "Grey" theme was not working
    - Bug fixes
V1.0.4
    - Decreased memory when saving images, should reduce crashes when trying to save or share a series.
V1.0.3
    - Bug fixing
    - Decreased memory used by background images.
    - Decreased overall size of the app.
V1.0.2
    - Fixing issues with user authentication
V1.0.1
    - Fixing issues with user authentication